# nanoLLM

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_build_llm.ipynb  02_load_data.ipynb  03_train_model.ipynb  04_load_pretrained_model_from_checkpoints.ipynb  05_multi_phase_training.ipynb  05_run_inference.ipynb  06_run_inference.ipynb  architecture.ipynb  load_data.ipynb
scripts/: compare_checkpoints.py  resume.py  train.py
src/: __init__.py  checkpoint.py  compare.py  config.py  embeddings.py  logging_setup.py  loss.py  model.py  paths.py  utils.py
src/config/: __init__.py  inference.py  logging.py  model.py  paths.py  tokenizer.py  training.py
src/data/: dataset.py  io.py  loader.py  processor.py
src/inference/: generate.py
src/model/: blocks.py  model.py
src/training/: __init__.py  cli.py  resume_context.py  runner.py  schedule.py  schema.py  trainer.py
tests/: conftest.py
tests/integration/: test_checkpoint.py
tests/integration/data/: test_pipeline.py
tests/integration/scripts/: test_compare_cli.py
tests/integration/training/: test_resume_cli.py  test_train_cli.py  test_training_run.py
tests/unit/: test_checkpoint.py  test_compare.py  test_config.py  test_logging_setup.py  test_loss.py  test_paths.py  test_utils.py
tests/unit/data/: test_dataset.py  test_io.py  test_loader.py  test_processor.py
tests/unit/inference/: test_generate.py
tests/unit/model/: test_blocks.py  test_embeddings.py  test_model.py
tests/unit/training/: test_cli_helpers.py  test_resume_context.py  test_runner.py  test_schedule.py  test_schema.py  test_step.py  test_trainer.py
