[project]
name = "nanollm"
version = "0.1.0"
description = "building an LLM with jax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.5",
    "gradio>=6.9.0",
    "grain>=0.2.16",
    "jax>=0.9.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.3",
    "orbax-checkpoint>=0.11.0",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
nanollm-train = "scripts.train:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Implicit conversion of an array to a dtype is deprecated:DeprecationWarning:chex",
    "ignore:Sharding info not provided when restoring:UserWarning:orbax",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
